--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,7 @@ web-interface/assets/.DS_Store
 #Terraform
 # Local .terraform directories
 **/.terraform/*
+*.terraform
 
 # .tfstate files
 *.tfstate
