--- a/container-parallel/Dockerfile
+++ b/container-parallel/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 WORKDIR /app
 COPY ./webServer ./
-# ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND noninteractive
 # ENV FLASK_APP webServer
 # ENV FLASK_RUN_HOST 127.0.0.1
 RUN apt update && \
