Empower run.py. Now sends better error messages and ends after 24h (not working - signal 11)

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -4,7 +4,7 @@ COPY ./data ./
 ENV DEBIAN_FRONTEND noninteractive
 RUN apk update && \
     apk add --no-cache gcc libc-dev
-RUN gcc -O2 -fopenmp ./lcs_algorithm.c -o ./lcs.exe
+RUN gcc -O2 -fopenmp lcs_algorithm.c -o lcs
 RUN pip install boto3
 CMD ["python3", "run.py"]
 
