--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: CICD
 
-# Triggers the workflow on push or pull request events but only for the main branch
 on:
   push:
     branches: [ main ]
@@ -11,33 +10,31 @@ permissions:
   contents: read
 
 env:
-  BUILD_TYPE: Release #CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   gmail_mail: "awss.unipv@gmail.com"
   psw_gmail: ${{ secrets.GMAIL_PASSWORD }}
 
 jobs:
   terraform-python-test:
+    name: Python test for lambdas
     runs-on: ubuntu-latest
     environment: Production
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/terraform/src/**'
-    # - if: steps.changes.outputs.src == 'true'
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
         cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -45,32 +42,32 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 ${{github.workspace}}/terraform/src/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       continue-on-error: true
+
     - name: Test with pytest
       run: |
         pytest
       working-directory: ${{github.workspace}}/tests/
 
   docker-python-test:
+    name: Test Python orchestrator
     runs-on: ubuntu-latest
     environment: Production
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/docker/src/run.py'
-    # - if: steps.changes.outputs.src == 'true'
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
         cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -80,19 +77,15 @@ jobs:
       continue-on-error: true
 
   c-test:
+    name: Build and test C code
     runs-on: ubuntu-latest
     environment: Production
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/docker/src/lcs_algorithm.c'
-    # - if: steps.changes.outputs.src == 'true'
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-    - name: make
+    - name: Build
       run: make
       working-directory: ${{github.workspace}}/docker/src/
 
@@ -102,41 +95,36 @@ jobs:
       working-directory: ${{github.workspace}}/tests/
       if: steps.check.outputs.triggered == 'false'
       
-    - name: Upload artifact
+    - name: Upload lcs artifact
       uses: actions/upload-artifact@v3
       with:
         name: lcs
         path: ${{github.workspace}}/docker/src/lcs
 
   docker-container:
+    name: Build Docker container
     runs-on: ubuntu-latest
     needs: [c-test,docker-python-test]
     environment: Production
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/docker/**'
-    # - if: steps.changes.outputs.src == 'true'
     - name: Checkout
       uses: actions/checkout@v3
     
-    - name: Download artifact
+    - name: Download lcs artifact
       uses: actions/download-artifact@v3
       with:
         name: lcs
         path: ./
 
-    - name: build docker container
+    - name: Build Docker image
       id: build-image
       run: |
         docker build -t lcs-container .
         docker save lcs-container > /tmp/lcs-container.tar
       working-directory: ${{github.workspace}}/docker/
 
-    - name: Upload artifact
+    - name: Upload image artifact
       uses: actions/upload-artifact@v3
       with:
         name: lcs-container
@@ -144,7 +132,7 @@ jobs:
 
 
   terraform:
-    name: 'Terraform'
+    name: 'Build Terraform infrastructure'
     needs: terraform-python-test
     runs-on: ubuntu-latest
     environment: Production
@@ -160,13 +148,6 @@ jobs:
         shell: bash
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/terraform/**'
-    #           - '{{github.workspace}}/web-interface/**'
-    # - if: steps.changes.outputs.src == 'true'
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
@@ -206,20 +187,12 @@ jobs:
 
 
   deploy-ecs:
-    name: ecs-deploy
+    name: Deploy image on ECS
     needs: [terraform, docker-container]
     runs-on: ubuntu-latest
     environment: Production
 
     steps:
-    # - uses: dorny/paths-filter@v2
-    #     with:
-    #       filters: |
-    #         src:
-    #           - '{{github.workspace}}/docker/**'
-    #           - '{{github.workspace}}/terraform/ecs.tf'
-    #           - '{{github.workspace}}/terraform/main.tf'
-    # - if: steps.changes.outputs.src == 'true'
     - name: Checkout
       uses: actions/checkout@v3
 
@@ -234,7 +207,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Download artifact
+    - name: Download image artifact
       uses: actions/download-artifact@v3
       with:
         name: lcs-container
