--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements_sendMail.txt ]; then pip install -r requirements_sendMail.txt; fi
 
     - name: Lint with flake8
       run: |
@@ -45,7 +45,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest test_sendMail.py
       working-directory: ${{github.workspace}}/tests/
 
   docker-python-test:
@@ -67,6 +67,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+        if [ -f requirements_dockerRun.txt ]; then pip install -r requirements_dockerRun.txt; fi
 
     - name: Lint with flake8
       run: |
@@ -75,6 +76,11 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 ${{github.workspace}}/docker/src/run.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       continue-on-error: true
+
+    - name: Test with pytest
+      run: |
+        pytest test_run.py
+      working-directory: ${{github.workspace}}/tests/
 
   c-test:
     name: Build and test C code
