--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,6 @@ on:
       - terraform/**
       - web-interface/**
       - .github/workflows/**
-  pull_request:
-    branches: [ main ]
-    paths:
-      - docker/**
-      - terraform/**
-      - web-interface/**
-      - .github/workflows/**
 
 permissions:
   contents: read
@@ -22,7 +15,7 @@ permissions:
 jobs:
   #Tests and lints Python code for aws lambdas
   terraform-python-test:
-    name: Python test for lambdas
+    name: Lambda tests
     runs-on: ubuntu-latest
     environment: Production
 
@@ -59,7 +52,7 @@ jobs:
 
   #Tests and lints Python code for run.py script
   docker-python-test:
-    name: Test Python orchestrator
+    name: Test container script
     runs-on: ubuntu-latest
     environment: Production
 
@@ -121,7 +114,7 @@ jobs:
 
   # Build docker image and create artifact
   docker-container:
-    name: Build Docker container
+    name: Build Docker image
     runs-on: ubuntu-latest
     needs: [c-test,docker-python-test]
     environment: Production
@@ -151,7 +144,7 @@ jobs:
 
   #FMT, Plant, Apply of Terraform code infrastructure
   terraform:
-    name: 'Build Terraform infrastructure'
+    name: 'Terraform deploy'
     needs: terraform-python-test
     runs-on: ubuntu-latest
     environment: Production
@@ -199,7 +192,7 @@ jobs:
 
   #Push the Docker images from artifact on AWS ECR
   deploy-ecs:
-    name: Deploy image on ECS
+    name: Deploy image on ECR
     needs: [terraform, docker-container]
     runs-on: ubuntu-latest
     environment: Production
